--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>
-        Amogus
-    </title>
-    <link rel="stylesheet" href="./style.css">
-    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Music For Everyone</title>
 </head>
 <body>
+    <div class="main-body">
+        <div class="wrapper">
+                <!-- ------------------------------------------------------------------------------------------------------------------------------------------- -->
+            <header class="header">
+                <nav class="navbar">
+                    <a href="#" class="nav-logo" style="padding-top: 1em;">
+                        <img src="images/logo.png" alt="logo">
+                    </a>
+                    <ul class="nav-menu">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Premium</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Help</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Download</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"  style="color: #37a282;">Sign Up  </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Log In</a>
+                        </li>
+                    </ul>
+                    <div class="hamburger">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                </nav>
+            </header>
+                <!-- ------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+            <div class="main">
+                <div class="left-part" style="font-size: 2.5em;">
+                   <h1> Music for </h1>
+                   <h1>Everyone.</h1>
+                   <br>
+                   <p style="font-size: 12px;">Millions of songs. No credit card method</p>
+                   <br>
+                   <button class="btn">Hit the</button>
+                </div>
+                <div class="right-part">
+                    <img src="images/drumkit.png" alt="drum">
+                </div>
+            </div>
+                <!-- ------------------------------------------------------------------------------------------------------------------------------------------- -->
+            <div class="last-part">
+                <h1>Try Premium free for 1 month.</h1>
+                <p>Play millions of songs ad-free,on-demand,and offline</p>
+                <button class="last-btn"></button>
+            </div>
+        </div>
+    </div>
 
 </body>
+</html>
