--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                 <!-- ------------------------------------------------------------------------------------------------------------------------------------------- -->
             <div class="last-part">
                 <h1>Try Premium free for 1 month.</h1>
+                <br>
                 <p>Play millions of songs ad-free,on-demand,and offline</p>
-                <button class="last-btn"></button>
+                <br>
+                <button class="last-btn">SEE PRINCING</button>
             </div>
         </div>
     </div>
